@@ -6,10 +6,11 @@ CHANGES
 0.5.1
 ------
 
-Added ability to show error bars
+Added ability to show error bars in plots
 Meta data now saved with project files - allows saving plots and selections
-Can add table to plot
+Can add a table to plot using sub-table contents
 Changed function evaluation so that math functions work
+Some fixes for table selection
 
 ------
 0.5.0
